<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutlist">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="234dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/cvPeliculas"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@android:color/transparent"

        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@id/guideline3"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.050000012">

        <LinearLayout
            android:id="@+id/lyHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="4">


            <ImageView
                android:id="@+id/imageGenre"
                android:layout_marginStart="15dp"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"

                android:layout_weight="2"
                app:srcCompat="@drawable/comedia" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
              >

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_marginTop="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:textStyle="bold|italic"
                    app:layout_constraintBottom_toTopOf="@+id/guideline4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline7"
                    app:layout_constraintTop_toTopOf="@+id/guideline3"
                    tools:text="@string/titulo" />

                <TextView
                    android:id="@+id/tvGenre"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="center_horizontal"
                    android:textColor="#1A237E"
                    android:textSize="25sp"
                    android:textStyle="bold"

                    tools:text="@string/genero" />

                <TextView
                    android:id="@+id/tvYear"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|top"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    tools:text="@string/año" />


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>